--- a/hire-me.html
+++ b/hire-me.html
@@ -37,7 +37,8 @@
                 <div class="heading">
                     <h2>Hire Me</h2>
                 </div>
-                <form>
+                <form name="submit-to-google-sheet">
+                    
                     <div class="form-group"><label for="email">Email</label><input class="form-control" type="email" id="email"></div>
                     <div class="form-group"><label for="message">Message</label><textarea class="form-control" id="message"></textarea></div>
                     <div class="form-group">
@@ -56,6 +57,24 @@
             <div class="social-icons"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-instagram-outline"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a></div>
         </div>
     </footer>
+    <script>
+        const scriptURL = 'https://script.google.com/macros/s/AKfycbyxEsj42kt0w1IDfK6pEzx6qPP54AxRJpCVl-9aj_Q0XdbrAaVvYNKU4fXVARtSxVmxSw/exec'
+        const form = document.forms['submit-to-google-sheet']
+        const msg = document.getElementById('msg')
+      
+        form.addEventListener('submit', e => {
+          e.preventDefault()
+          fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+            .then(response => {
+                msg.innerHTML = "Message Sent Successfully"
+                setTimeout(function () {
+                    msg.innerHTML = ""
+                },5000)
+                form.reset()
+            })
+            .catch(error => console.error('Error!', error.message))
+        })
+      </script>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/pikaday.min.js"></script>
