--- a/hire-me.html
+++ b/hire-me.html
@@ -38,8 +38,8 @@
                     <h2>Hire Me</h2>
                 </div>
                 <form name="submit-to-google-sheet">
-                    
-                    <div class="form-group"><label for="email">Email</label><input class="form-control" type="email" id="email"></div>
+                    <div class="form-group"><label for="Name">Name</label><input class="form-control" type="email" name="Name" id="email"></div>
+                    <div class="form-group"><label for="email">Email</label><input class="form-control" type="email" name="Email" id="email"></div>
                     <div class="form-group"><label for="message">Message</label><textarea class="form-control" id="message"></textarea></div>
                     <div class="form-group">
                         <div class="form-row">
