--- a/hire-me.html
+++ b/hire-me.html
@@ -38,9 +38,9 @@
                     <h2>Hire Me</h2>
                 </div>
                 <form name="submit-to-google-sheet">
-                    <div class="form-group"><label for="Name">Name</label><input class="form-control" type="email" name="Name" id="email"></div>
+                    <div class="form-group"><label for="Name">Name</label><input class="form-control" type="text" name="Name" id="name"></div>
                     <div class="form-group"><label for="email">Email</label><input class="form-control" type="email" name="Email" id="email"></div>
-                    <div class="form-group"><label for="message">Message</label><textarea class="form-control" id="message"></textarea></div>
+                    <div class="form-group"><label for="message">Message</label><textarea class="form-control" id="message" name="Message"></textarea></div>
                     <div class="form-group">
                         <div class="form-row">
                             <div class="col-md-6"><label for="hire-date">Date</label><input class="form-control" id="hire-date" type="date"></div>
