--- a/hire-me.html
+++ b/hire-me.html
@@ -47,6 +47,7 @@
                             <div class="col-md-6 button"><button class="btn btn-primary btn-block" type="submit">SEND</button></div>
                         </div>
                     </div>
+                    <span id="msg"></span>
                 </form>
             </div>
         </section>
