--- a/hire-me.html
+++ b/hire-me.html
@@ -37,9 +37,9 @@
                 <div class="heading">
                     <h2>Hire Me</h2>
                 </div>
-                <form action="https://formsubmit.co/el/conaye" method="POST">
+                <form action="https://formsubmit.co/sennydebby@gmail.com"  method="POST">
                     <div class="form-group"><label for="Name">Name</label><input class="form-control" type="text" name="Name" id="name"></div>
-                    <div class="form-group"><label for="email">Email</label><input class="form-control" type="email" name="Email" id="email"></div>
+                    <div class="form-group"><label for="email">Email</label><input class="form-control" type="email" name="email" id="email"></div>
                     <div class="form-group"><label for="message">Message</label><textarea class="form-control" id="message" name="Message"></textarea></div>
                     <div class="form-group">
                         <div class="form-row">
